--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 .vs
 .idea
-*.sln
 *.sdf
+*.suo
 
-**/x64
 */Debug
 */Release
 cmake-build-debug
@@ -21,10 +20,6 @@ cmake-build-debug
 *.gch
 *.pch
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
 
 # Fortran module files
 *.mod
@@ -34,7 +29,6 @@ cmake-build-debug
 *.lai
 *.la
 *.a
-*.lib
 
 # Executables
 *.exe
